--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,8 +1,11 @@
 <% @page_heading = _("Categories") %>
 
 <div class='left_form'>
-
-  <%= form_tag :action=>"edit" , :id => "#{@category.nil? ? 'new' : @category.id}" do %>
+  <% my_options = {:action => "edit"} %>
+  <% if @category %>
+    <% my_options.merge({:id => "#{@category.id}"}) %>
+  <% end %>
+  <%= form_tag(my_options) do %>
   <%= error_messages_for 'category' %>
   <div class='clearfix'>
     <label for="category_name"><%= _("Name")%></label>
